# rpi-messages

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  create_uf2.py  create_wifi_uf2.py
common/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
common/src/: consts.rs  lib.rs  protocol.rs  types.rs
common/src/protocols/: mod.rs  pico.rs  web.rs
pico/: .gitignore  Cargo.toml  Makefile  memory.x  pico.code-workspace  rust-toolchain.toml  rustfmt.toml
pico/.cargo/: config.toml
pico/src/: display.rs  error.rs  fetch_data.rs  fetch_protocol.rs  lib.rs  main.rs  messagebuf.rs  protocol.rs  static_data.rs
server/: Cargo.toml  rust-toolchain.toml  server.code-workspace
server/src/: device.rs  device_handler.rs  error.rs  image.rs  main.rs  message.rs  message_db.rs  uf2.rs  user.rs  users.rs  web.rs
server/src/db/: authorization.rs  device.rs  memory_db.rs  message.rs  mod.rs  user.rs
server/src/handlers/: device.rs  mod.rs  telegram.rs  uf2.rs  web.rs
server/src/handlers/configure/: mod.rs  uf2.rs
server/src/handlers/telegram/: authorization.rs  mod.rs
server/src/handlers/web/: mod.rs
server/webclient/: index.html  index.js
