[package]
name = "rpi-messages-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1", features = ["experimental-derive"], optional = true }
chrono = { version = "0.4.40", features = ["serde"], optional = true }
embassy-net = { version = "*", features = ["tcp", "proto-ipv4", "medium-ip"], optional = true }
embedded-io-async = { version = "*", optional = true }
tokio = { version = "*", features = ["io-util"], optional = true }

[features]
default = []
std = []
pico = ["postcard", "embedded-io-async", "embassy-net"]
web = ["serde/std", "std", "postcard/use-std", "chrono", "tokio"]

