[package]
edition = "2021"
name = "rpi-messages-pico"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
rpi-messages-common = { path = "../common" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "0.2.0", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.2", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4" ] }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.7.15"
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
st7735-lcd = "0.9.0"

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.7"

