[package]
edition = "2021"
name = "rpi-messages-pico"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
rpi-messages-common = { path = "../common" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = [] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "0.2.0", features = [] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.2", features = ["nightly", "unstable-traits" ] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = [] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4" ] }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = [] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = ["firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", features = ["overclock"] }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
#panic-probe = { version = "0.3", features = [] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
embedded-graphics = "0.8.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.7.15"
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.5.0", features = [] }
embedded-io = { version = "0.5.0", features = [] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
rand = { version = "0.8.5", default-features = false }
st7735-lcd = "0.9.0"
rp2040-panic-usb-boot = "0.5.0"
embedded-text = "0.6.2"
postcard = "1.0.8"


