[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", package = "rpi-messages-common" }
# We want to use the same postcard version as the common dependency. a.d. TODO check if this works out if common spefifiec e.g. 1.0 but 1.1 alsp exists. Does this pick 1.0 or 1.1?
postcard = { version = "*", features = ["use-std"] }
anyhow = "1.0.75"
axum = { version = "0.6.20", features = [ "form", "headers", "macros" ] }
chrono = { version = "0.4.31", features = [ "serde", "rkyv" ] }
image = "0.24.7"
rgb565 = "0.1.3"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = [ "macros", "net", "io-util", "rt-multi-thread" ] }