[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", package = "rpi-messages-common", features = [ "web", "pico" ] }
serde = { version = "1.0" }
anyhow = { version = "1.0" }
axum = { version = "0.8", features = ["macros", "multipart", "original-uri"] }
chrono = { version = "0.4", features = [ "serde" ] }
image = { version = "0.25" }
rgb565 = { version = "0.1" }
serde_json = { version = "1.0" }
tokio = { version = "1.43", features = [ "macros", "net", "io-util", "rt-multi-thread" ] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
thiserror = { version = "2.0" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "normalize-path", "redirect", "trace"] }
bytes = "1.10.1"
